# suda

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: release.yml
docs/: INDEX.md
docs/dev/: architecture.md  contributing.md
docs/user/: commands.md  getting-started.md  integration.md
src/: db.rs  display.rs  main.rs  memory.rs  project.rs  state.rs
tests/: integration.rs
