[package]
name = "suda"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/simonspoon/suda"
description = "Structured memory and knowledge management CLI for AI agent workflows"
keywords = ["memory", "knowledge", "agent", "cli", "sqlite"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
